# sharky-frontend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  frontend_structure.md  frontend_structure.txt  pyproject.toml  requirements.txt
.github/workflows/: publish-docker.yml
frontend/: __init__.py
src/: basic_config.py  main.py  render.py  render_app.py  utils.py
